--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs: 
   buid: 
     docker:
-      - image: circleci/openjdk:8:jdk-browsers
+      - image: circleci/openjdk:8jdk-browsers
     steps:
       - checkout
       - run: echo "Hello CIecleCI!"
